2011-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_optional => avt.optional): new function
	lua/akfavatar/avtdemo.lua, lua/audioplayer.lua: adapted

2011-04-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_ticks): new function
	lua/lua-avt.c (lavt_ticks => avt.ticks): new function

	* avatar.c (avt_wait): check if time is > 0

2011-04-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.to_latin1, utf8.from_latin1):
	new functions

	* lua/akfavatar/utf8.lua (utf8.to_ncr): new function
	  (utf8.from_ncr): renamed from utf8.ncr

2011-04-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (playing): new variable
	many functions adapted (simplified)

	* lua/lua-akfavatar-prg.c (start_screen):
	explain [F11] and [Esc]

2011-04-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager):
	make sure the close button doesn't collide with textfield

	* lua/lua-akfavatar-prg.c (check_filename, ask_file):
	also show header files (*.h) as text

2011-03-31  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (luaopen_akfavatar): create a reusable silent sound
	(make_audio_element): reuse silence

	* lua/lua-avt.c (laudio_tostring): call silent sounds "silent"

	* lua/lua-akfavatar-prg.c (show_text): set balloon color to "tan"

2011-03-30  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-vorbis.c:
	redefines avt.load_audio_file and avt.load_audio_string
	lua/audioplayer.lua, lua/akfavatar/avtdemo.lua: adapted

	* lua/lua-avt.c (avt.load_base_audio_file, avt.load_base_audio_string):
	new functions

	* lua/lua-avt.c (lavt_silent => avt.silent): new function

2011-03-28  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/avtdemo:
	commands avatarname, ballooncolor, textcolor improved
	commands size, width, height no longer needed (ignored)
	commands effectpause, back no longer supported

	* avtvorbis.c (avta_load_vorbis_file, avta_load_vorbis_data):